# testrepozytorium

./: .gitmodules  CMakeLists.txt  README.md  deck.txt
.github/workflows/: build.yml
decks/: example.txt
src/: config.hpp  header.hpp  main.cpp
src/engine/: Levenshtein.cpp  Levenshtein.hpp  engine.cpp  engine.hpp  sm2.cpp
src/models/: flashcard.hpp
src/storage/: Flashcard.hpp  deck.json  deck.txt  file_manager.cbp  file_manager.cpp  file_manager.depend  file_manager.hpp  file_manager.layout
src/ui/: menu.cpp  menu.hpp
